fix: h2 align center

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -371,10 +371,10 @@ textarea:valid~label {
 /* blog & podcast styling */
 
 .blog-banner {
-    width: 100vw;
+    width: 100%;
     height: 300px;
     background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url("../images/banner-img-blogs.png") no-repeat top center;
-    background-size: 100%;
+    background-size: cover;
     text-align: center;
     margin-bottom: 2em;
 }
@@ -601,7 +601,6 @@ input[type="checkbox"]:hover {
 
 h2 {
     left: 100px;
-    position: relative;
 }
 
 #recordedAudio {
